--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="wrapper flex-adapt">
      <div class="logo-wrapper">
-        <a href="/pages/main/index.html"><img src="/imgs/logo/Logosite2-1-e1697640843866.png" alt="" class="logo"></a>
+        <a href="/pages/main/index.html"><img src="" alt="" class="logo"></a>
      </div>
      <div class="ul-wrapper">
         <ul class="ul-header">
@@ -46,8 +46,8 @@
                     <div class="square-one two">
                         <div class="swiper mySwiper">
                             <div class="swiper-wrapper">
-                              <div class="swiper-slide"><img src="/imgs/clothes/ДЖИНСЫзад2-350x350.jpg" alt=""></div>
-                              <div class="swiper-slide"><img src="/imgs/clothes/ШОРТЫ-ПЕРЕД-1-350x350.jpg" alt=""></div>
+                              <div class="swiper-slide"><img src="ДЖИНСЫзад2-350x350.jpg" alt=""></div>
+                              <div class="swiper-slide"><img src="ШОРТЫ-ПЕРЕД-1-350x350.jpg" alt=""></div>
                               <div class="swiper-slide"><img src="/imgs/clothes/ШОРТЫ-ПЕРЕД-1ауе-350x350.jpg" alt=""></div>
                               <div class="swiper-slide"><img src="/imgs/clothes/ПЕРЕД-готовый-1-350x350.jpg" alt=""></div>
                             </div>
