--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="wrapper flex-adapt">
      <div class="logo-wrapper">
-        <a href="/pages/main/index.html"><img src="" alt="" class="logo"></a>
+        <a href="/pages/main/index.html"><img src="Logosite2-1-e1697640843866.png" alt="" class="logo"></a>
      </div>
      <div class="ul-wrapper">
         <ul class="ul-header">
